--- a/main.css
+++ b/main.css
@@ -153,8 +153,8 @@ main {
   margin-left: 25px;
 }
 .nav .links a:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background-color: #f0f7ff;
   color: #197cbe;
 }
@@ -190,12 +190,13 @@ main {
   color: #404040;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  font-weight: bold;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 700;
   font-size: 0.7rem;
 }
 .nav .bottom-cta .cta-btn:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   cursor: pointer;
   background-color: #ffb012;
 }
@@ -311,8 +312,8 @@ main {
   width: 596.66px;
   height: 363.12px;
   border-radius: 20px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   padding: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -373,8 +374,8 @@ main {
   color: white;
   position: relative;
   overflow: hidden;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .info-balance-card1 .paypal .visa .visa-name h2 {
   font-size: 1rem;
@@ -591,8 +592,8 @@ main {
   width: 596.66px;
   height: 322.38px;
   background-color: white;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   border-radius: 20px;
   padding: 25px;
   display: -webkit-box;
@@ -781,8 +782,8 @@ main {
   width: 157.93px;
   height: 168.74px;
   background-color: white;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   border-radius: 20px;
   padding: 20px;
   display: -webkit-box;
@@ -859,8 +860,8 @@ main {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 5px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .info-statics-outcome .static-bar .indicator {
   display: -webkit-box;
@@ -898,6 +899,8 @@ main {
   color: #F8964C;
 }
 .info-statics-outcome .bar1 .valid {
+  -webkit-animation: 2s shopping ease-in-out;
+          animation: 2s shopping ease-in-out;
   background-image: -webkit-gradient(linear, left top, right top, from(#FCAE73), to(#F79042));
   background-image: linear-gradient(to right, #FCAE73, #F79042);
   width: 52%;
@@ -909,6 +912,8 @@ main {
   color: #22A447;
 }
 .info-statics-outcome .bar2 .valid {
+  -webkit-animation: 2s electronics ease-in-out;
+          animation: 2s electronics ease-in-out;
   background-image: -webkit-gradient(linear, left top, right top, from(#209D43), to(#2BC255));
   background-image: linear-gradient(to right, #209D43, #2BC255);
   width: 21%;
@@ -920,6 +925,8 @@ main {
   color: #70A6E8;
 }
 .info-statics-outcome .bar3 .valid {
+  -webkit-animation: 2s travels ease-in-out;
+          animation: 2s travels ease-in-out;
   background-color: #70A6E8;
   width: 74%;
 }
@@ -935,8 +942,8 @@ main {
   width: 341.51px;
   height: 183.03px;
   background-color: white;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   margin-top: 35px;
   border-radius: 19px;
   padding: 10px;
@@ -1071,8 +1078,8 @@ main {
   transition: 1s;
 }
 .send-transaction .send .cta-btn2 button:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   background-color: #ffb012;
   cursor: pointer;
 }
@@ -1106,8 +1113,15 @@ main {
   font-weight: bold;
   color: white;
   font-size: 1.4rem;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+.info-statics-transaction .welcome-msg:hover {
+  -webkit-box-shadow: rgba(25, 123, 189, 0.5) 0px 10px 15px -3px, rgba(25, 123, 189, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(25, 123, 189, 0.5) 0px 10px 15px -3px, rgba(25, 123, 189, 0.05) 0px 4px 6px -2px;
+  cursor: pointer;
 }
 .info-statics-transaction .welcome-msg img {
   -webkit-filter: invert(38%) sepia(44%) saturate(1023%) hue-rotate(324deg) brightness(102%) contrast(87%);
@@ -1123,4 +1137,54 @@ main {
   top: 0;
   left: -20px;
   width: 100px;
+}
+
+@-webkit-keyframes shopping {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 52%;
+  }
+}
+
+@keyframes shopping {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 52%;
+  }
+}
+@-webkit-keyframes electronics {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 21%;
+  }
+}
+@keyframes electronics {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 21%;
+  }
+}
+@-webkit-keyframes travels {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 74%;
+  }
+}
+@keyframes travels {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 74%;
+  }
 }
