--- a/style/_statics.scss
+++ b/style/_statics.scss
@@ -74,6 +74,7 @@
         }
 
         .valid{
+            animation: 2s shopping ease-in-out;
             background-image: linear-gradient(to right, #FCAE73,#F79042);
             width: 52%;
             
@@ -89,6 +90,7 @@
             }
         }
         .valid{
+            animation: 2s electronics ease-in-out;
             background-image: linear-gradient(to right, #209D43,#2BC255);
             width: 21%;
             
@@ -104,6 +106,7 @@
             }
         }
         .valid{
+            animation: 2s travels ease-in-out;
             background-color: #70A6E8;
             width: 74%;
             
