--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -64,6 +64,8 @@ $border-rds : 59px ;
 
 // css-shadows
 
-$shade: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+//$shade: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+
+$shade:rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
 $shade-hover: rgba(25, 123, 189, 0.5) 0px 10px 15px -3px, rgba(25, 123, 189, 0.05) 0px 4px 6px -2px;
