--- a/style/_welcome.scss
+++ b/style/_welcome.scss
@@ -29,6 +29,11 @@
         color: white;
         font-size: 1.4rem;
         box-shadow: $shade;
+        transition: 1s;
+        &:hover{
+            box-shadow: $shade-hover;
+            cursor: pointer;
+        }
 
         img{
             filter: invert(38%) sepia(44%) saturate(1023%) hue-rotate(324deg) brightness(102%) contrast(87%);
