--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -17,8 +17,18 @@
         gap: 10px;
         .logo{
             img{
-                filter: invert(37%) sepia(33%) saturate(3060%) hue-rotate(180deg) brightness(89%) contrast(81%);
+                //filter: invert(37%) sepia(33%) saturate(3060%) hue-rotate(180deg) brightness(89%) contrast(81%);
                 width: 50px;
+                position: relative;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    background-image: url(../static/coin.svg);
+                    width: 4rem;
+                    height: 4rem;
+                    top: 0;
+                    left: 0;
+                }
             }
         }
 
@@ -69,7 +79,8 @@
         .cloud-img{
             img{
                 width: 80px;
-                filter: invert(37%) sepia(98%) saturate(582%) hue-rotate(165deg) brightness(90%) contrast(91%);
+                //filter: invert(37%) sepia(98%) saturate(582%) hue-rotate(165deg) brightness(90%) contrast(91%);
+               
             }
         }
 
@@ -90,10 +101,8 @@
             border-radius: 15px;
             color: $brownish;
             transition: .5s;
-            font-family: 'Quicksand', sans-serif;
-            font-weight: 700;
+            font-weight: bold;
             font-size: .7rem;
-            
             &:hover{
                 box-shadow: $shade;
                 cursor: pointer;
